[project]
name = "chuang-tools"
version = "0.1.0"
description = "Chuang et al. (2024) LLM-agent opinion dynamics — visualization & analysis tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "socsim-tools",
]

[project.scripts]
chuang-tools = "chuang_tools.cli:main"

[tool.uv.sources]
socsim-tools = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", subdirectory = "tools/socsim_tools" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chuang_tools"]
